// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<NavigationHeader /> > DrawerStyle story renders snapshot 1`] = `
<header
  aria-label="Main navigation"
  class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionSticky e1bn4x3g34 css-1km1s24-MuiPaper-root-MuiAppBar-root-StyledAppBar"
  style="top: 0px;"
  tabindex="0"
>
  <div
    class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular e1bn4x3g33 css-tw0g88-MuiToolbar-root-StyledToolbar"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover e1bn4x3g27 ecbcrkq0 css-j4g8ja-MuiTypography-root-MuiLink-root-StyledLink-defaultStyle-StyledLink-StyledLogoLinkWrapper"
    >
      <div
        class="css-d4qctl-StyledTitleContainer e1bn4x3g25"
      >
        <div
          class="css-1pjyetm-StyledTitleTagWrapper e1bn4x3g24"
        >
          <p>
            My App
          </p>
        </div>
      </div>
    </a>
    <div
      class="css-19hl789-StyledPrimaryNavContainer e1bn4x3g22"
    >
      <section
        class="css-pirabh-StyledSection-StyledSection e13tbovl6"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary e810m81 et5j5k2 css-fjil8i-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-MediumButtonStyles-StyledButton-UnifiedNavItem-UnifiedNavItem"
          tabindex="0"
          type="button"
        >
          <span
            class="css-1t5yxjj-StyledChildren-StyledChildren et5j5k1"
          >
            <span
              class="css-ne3aa0-StyledLabel-StyledLabel e810m80"
            >
              <div
                class="css-10l24hl-StyledLabelTextWrapper-StyledLabelTextWrapper e13tbovl1"
              >
                Home
              </div>
              <div
                aria-hidden="true"
                class="css-kik51h-StyledLabelTextWrapperShadow-StyledLabelTextWrapperShadow e13tbovl0"
              >
                Home
              </div>
            </span>
          </span>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
        <div
          class="css-16cw766-StyledHoverDrawerContainer e1bn4x3g0"
        >
          <a
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary e810m81 et5j5k2 css-1m6giw9-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-MediumButtonStyles-StyledButton-UnifiedNavItem-UnifiedNavItem"
            href="https://www.google.com"
            items="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
            rel="noopener noreferrer"
            tabindex="0"
            target="_blank"
          >
            <span
              class="css-1t5yxjj-StyledChildren-StyledChildren et5j5k1"
            >
              <span
                class="css-ne3aa0-StyledLabel-StyledLabel e810m80"
              >
                <div
                  class="css-10l24hl-StyledLabelTextWrapper-StyledLabelTextWrapper e13tbovl1"
                >
                  Products
                </div>
                <div
                  aria-hidden="true"
                  class="css-kik51h-StyledLabelTextWrapperShadow-StyledLabelTextWrapperShadow e13tbovl0"
                >
                  Products
                </div>
                <div
                  class="css-1q8yjse-StyledIcon emi0zh40"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-1rowxxw-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
                    data-file-name="IconChevronDownSmall"
                    data-testid="IconChevronDownSmall"
                    fillcontrast="white"
                    focusable="false"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  />
                </div>
              </span>
            </span>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </a>
        </div>
        <div
          class="css-16cw766-StyledHoverDrawerContainer e1bn4x3g0"
        >
          <a
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary e810m81 et5j5k2 css-1m6giw9-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-MediumButtonStyles-StyledButton-UnifiedNavItem-UnifiedNavItem"
            href="/services"
            items="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
            tabindex="0"
          >
            <span
              class="css-1t5yxjj-StyledChildren-StyledChildren et5j5k1"
            >
              <span
                class="css-ne3aa0-StyledLabel-StyledLabel e810m80"
              >
                <div
                  class="css-10l24hl-StyledLabelTextWrapper-StyledLabelTextWrapper e13tbovl1"
                >
                  Services
                </div>
                <div
                  aria-hidden="true"
                  class="css-kik51h-StyledLabelTextWrapperShadow-StyledLabelTextWrapperShadow e13tbovl0"
                >
                  Services
                </div>
                <div
                  class="css-1q8yjse-StyledIcon emi0zh40"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-1rowxxw-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
                    data-file-name="IconChevronDownSmall"
                    data-testid="IconChevronDownSmall"
                    fillcontrast="white"
                    focusable="false"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  />
                </div>
              </span>
            </span>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </a>
        </div>
        <div
          class="css-16cw766-StyledHoverDrawerContainer e1bn4x3g0"
        >
          <a
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary e810m81 et5j5k2 css-1m6giw9-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-MediumButtonStyles-StyledButton-UnifiedNavItem-UnifiedNavItem"
            href="https://www.google.com"
            items="[object Object],[object Object],[object Object]"
            rel="noopener noreferrer"
            tabindex="0"
            target="_blank"
          >
            <span
              class="css-1t5yxjj-StyledChildren-StyledChildren et5j5k1"
            >
              <span
                class="css-ne3aa0-StyledLabel-StyledLabel e810m80"
              >
                <div
                  class="css-10l24hl-StyledLabelTextWrapper-StyledLabelTextWrapper e13tbovl1"
                >
                  Benchmarks
                </div>
                <div
                  aria-hidden="true"
                  class="css-kik51h-StyledLabelTextWrapperShadow-StyledLabelTextWrapperShadow e13tbovl0"
                >
                  Benchmarks
                </div>
                <div
                  class="css-1q8yjse-StyledIcon emi0zh40"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-1rowxxw-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
                    data-file-name="IconChevronDownSmall"
                    data-testid="IconChevronDownSmall"
                    fillcontrast="white"
                    focusable="false"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  />
                </div>
              </span>
            </span>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </a>
        </div>
      </section>
    </div>
    <section
      class="css-pirabh-StyledSection-StyledSection e13tbovl6"
    >
      <div
        class="css-16cw766-StyledHoverDrawerContainer e1bn4x3g0"
      >
        <a
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary e810m81 et5j5k2 css-12njv1n-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-MediumButtonStyles-StyledButton-UnifiedNavItem-UnifiedNavItem-UnifiedNavItem"
          href="/research"
          items="[object Object],[object Object]"
          tabindex="0"
        >
          <span
            class="css-1t5yxjj-StyledChildren-StyledChildren et5j5k1"
          >
            <div
              class="css-10l24hl-StyledLabelTextWrapper-StyledLabelTextWrapper e13tbovl1"
            >
              Research
            </div>
            <div
              aria-hidden="true"
              class="css-kik51h-StyledLabelTextWrapperShadow-StyledLabelTextWrapperShadow e13tbovl0"
            >
              Research
            </div>
            <div
              class="css-1q8yjse-StyledIcon emi0zh40"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-1rowxxw-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
                data-file-name="IconChevronDownSmall"
                data-testid="IconChevronDownSmall"
                fillcontrast="white"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              />
            </div>
          </span>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </a>
      </div>
    </section>
    <section
      class="css-1xgwlqi-StyledButtonSection e1bn4x3g20"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-colorPrimary e1bn4x3g30 et5j5k2 css-1n4xhz9-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton-StyledHeaderButton"
        tabindex="0"
        type="button"
      >
        <span
          class="css-1t5yxjj-StyledChildren-StyledChildren et5j5k1"
        >
          Sign in
        </span>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <button
        aria-label="[object Object]"
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeLarge MuiButton-textSizeLarge MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeLarge MuiButton-textSizeLarge MuiButton-colorPrimary e1bn4x3g28 et5j5k2 css-13z2n84-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-SecondaryButtonStyles-LargeButtonStyles-StyledButton-StyledWideIconButton"
        tabindex="0"
        type="button"
      >
        <span
          class="css-1t5yxjj-StyledChildren-StyledChildren et5j5k1"
        >
          <div
            class="css-1q8yjse-StyledIcon emi0zh40"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-1rowxxw-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
              data-file-name="IconPersonSmall"
              data-testid="IconPersonSmall"
              fillcontrast="white"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            />
          </div>
        </span>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </section>
  </div>
</header>
`;

exports[`<NavigationHeader /> > DropdownStyle story renders snapshot 1`] = `
<header
  aria-label="Main navigation"
  class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionSticky e1bn4x3g34 css-1km1s24-MuiPaper-root-MuiAppBar-root-StyledAppBar"
  style="top: 0px;"
  tabindex="0"
>
  <div
    class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular e1bn4x3g33 css-tw0g88-MuiToolbar-root-StyledToolbar"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover e1bn4x3g27 ecbcrkq0 css-j4g8ja-MuiTypography-root-MuiLink-root-StyledLink-defaultStyle-StyledLink-StyledLogoLinkWrapper"
      href="https://chanzuckerberg.com"
    >
      <div
        class="css-d4qctl-StyledTitleContainer e1bn4x3g25"
      >
        <div
          class="css-1m21yd3-StyledLogoWrapper e1bn4x3g26"
        >
          <div
            style="align-items: center; display: flex; font-size: 10px; font-weight: normal; height: 24px; justify-content: center; width: 50px;"
          >
            Logo slot
          </div>
        </div>
        <div
          class="css-1pjyetm-StyledTitleTagWrapper e1bn4x3g24"
        >
          <p>
            Title
          </p>
          <div
            class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-filledPrimary e1bn4x3g23 esrfbz40 css-hvtshh-MuiChip-root-StyledTag-tagSizeS-createTypeCss-square-StyledTag-StyledTag"
          >
            <span
              class="MuiChip-label MuiChip-labelMedium css-6od3lo-MuiChip-label"
            >
              Tag
            </span>
          </div>
        </div>
      </div>
    </a>
    <div
      class="css-19hl789-StyledPrimaryNavContainer e1bn4x3g22"
    >
      <section
        class="css-pirabh-StyledSection-StyledSection e13tbovl6"
      >
        <a
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary e810m81 et5j5k2 css-1m6giw9-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-MediumButtonStyles-StyledButton-UnifiedNavItem-UnifiedNavItem"
          role="button"
          tabindex="0"
        >
          <span
            class="css-1t5yxjj-StyledChildren-StyledChildren et5j5k1"
          >
            <span
              class="css-ne3aa0-StyledLabel-StyledLabel e810m80"
            >
              <div
                class="css-10l24hl-StyledLabelTextWrapper-StyledLabelTextWrapper e13tbovl1"
              >
                Primary
              </div>
              <div
                aria-hidden="true"
                class="css-kik51h-StyledLabelTextWrapperShadow-StyledLabelTextWrapperShadow e13tbovl0"
              >
                Primary
              </div>
            </span>
          </span>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </a>
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary e810m81 et5j5k2 css-1m6giw9-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-MediumButtonStyles-StyledButton-UnifiedNavItem-UnifiedNavItem"
          tabindex="0"
          type="button"
        >
          <span
            class="css-1t5yxjj-StyledChildren-StyledChildren et5j5k1"
          >
            <span
              class="css-ne3aa0-StyledLabel-StyledLabel e810m80"
            >
              <div
                class="css-10l24hl-StyledLabelTextWrapper-StyledLabelTextWrapper e13tbovl1"
              >
                Primary
              </div>
              <div
                aria-hidden="true"
                class="css-kik51h-StyledLabelTextWrapperShadow-StyledLabelTextWrapperShadow e13tbovl0"
              >
                Primary
              </div>
              <div
                class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-filledPrimary etq4jsl1 esrfbz40 css-n8zrq8-MuiChip-root-StyledTag-tagSizeS-createTypeCss-square-StyledTag-StyledTag"
              >
                <span
                  class="MuiChip-label MuiChip-labelMedium css-6od3lo-MuiChip-label"
                >
                  Tag
                </span>
              </div>
            </span>
          </span>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary e810m81 et5j5k2 css-1m6giw9-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-MediumButtonStyles-StyledButton-UnifiedNavItem-UnifiedNavItem"
          items="[object Object],[object Object]"
          tabindex="0"
          type="button"
        >
          <span
            class="css-1t5yxjj-StyledChildren-StyledChildren et5j5k1"
          >
            <span
              class="css-ne3aa0-StyledLabel-StyledLabel e810m80"
            >
              <div
                class="css-10l24hl-StyledLabelTextWrapper-StyledLabelTextWrapper e13tbovl1"
              >
                Primary
              </div>
              <div
                aria-hidden="true"
                class="css-kik51h-StyledLabelTextWrapperShadow-StyledLabelTextWrapperShadow e13tbovl0"
              >
                Primary
              </div>
              <div
                class="css-1q8yjse-StyledIcon emi0zh40"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-1rowxxw-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
                  data-file-name="IconChevronDownSmall"
                  data-testid="IconChevronDownSmall"
                  fillcontrast="white"
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                />
              </div>
            </span>
          </span>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </section>
      <div>
        <label
          class="css-11su3a8-StyledLabel e1h1uy4z2"
          for="nav-bar-search"
        >
          Search
        </label>
        <div
          class="MuiFormControl-root MuiTextField-root e1bn4x3g21 e1h1uy4z1 css-1b4gs1z-MuiFormControl-root-MuiTextField-root-StyledSearchBase-rounded-StyledSearchBase-StyledSearch"
        >
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall MuiInputBase-adornedStart css-1q6at85-MuiInputBase-root-MuiOutlinedInput-root"
          >
            <div
              class="MuiInputAdornment-root MuiInputAdornment-positionStart MuiInputAdornment-outlined MuiInputAdornment-sizeSmall e1h1uy4z0 css-cusln8-MuiInputAdornment-root-StyledInputAdornment"
            >
              <span
                class="notranslate"
              >
                ​
              </span>
              <button
                aria-label="search-button"
                class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeLarge MuiButton-textSizeLarge MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeLarge MuiButton-textSizeLarge MuiButton-colorPrimary et5j5k2 css-1xt4pop-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-SecondaryButtonStyles-LargeButtonStyles-StyledButton"
                tabindex="0"
                type="button"
              >
                <span
                  class="css-1t5yxjj-StyledChildren-StyledChildren et5j5k1"
                >
                  <div
                    class="css-1q8yjse-StyledIcon emi0zh40"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-1rowxxw-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
                      data-file-name="IconSearchSmall"
                      data-testid="IconSearchSmall"
                      fillcontrast="white"
                      focusable="false"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    />
                  </div>
                </span>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
            </div>
            <input
              aria-invalid="false"
              autocomplete="one-time-code"
              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputTypeSearch MuiInputBase-inputSizeSmall MuiInputBase-inputAdornedStart css-1xp6qmi-MuiInputBase-input-MuiOutlinedInput-input"
              id="nav-bar-search"
              placeholder="Search"
              type="search"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline css-r01yff-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
            >
              <legend
                class="css-1whs34k-MuiNotchedOutlined-root"
              >
                <span
                  class="notranslate"
                >
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
    </div>
    <section
      class="css-pirabh-StyledSection-StyledSection e13tbovl6"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary e810m81 et5j5k2 css-12njv1n-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-MediumButtonStyles-StyledButton-UnifiedNavItem-UnifiedNavItem-UnifiedNavItem"
        items="[object Object],[object Object]"
        tabindex="0"
        type="button"
      >
        <span
          class="css-1t5yxjj-StyledChildren-StyledChildren et5j5k1"
        >
          <div
            class="css-10l24hl-StyledLabelTextWrapper-StyledLabelTextWrapper e13tbovl1"
          >
            Secondary
          </div>
          <div
            aria-hidden="true"
            class="css-kik51h-StyledLabelTextWrapperShadow-StyledLabelTextWrapperShadow e13tbovl0"
          >
            Secondary
          </div>
          <div
            class="css-1q8yjse-StyledIcon emi0zh40"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-1rowxxw-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
              data-file-name="IconChevronDownSmall"
              data-testid="IconChevronDownSmall"
              fillcontrast="white"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            />
          </div>
        </span>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary e810m81 et5j5k2 css-12njv1n-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-MediumButtonStyles-StyledButton-UnifiedNavItem-UnifiedNavItem-UnifiedNavItem"
        tabindex="0"
        type="button"
      >
        <span
          class="css-1t5yxjj-StyledChildren-StyledChildren et5j5k1"
        >
          Secondary
          <div
            class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-filledPrimary es7myp0 esrfbz40 css-l6hxs0-MuiChip-root-StyledTag-tagSizeS-createTypeCss-square-StyledTag-StyledTag"
          >
            <span
              class="MuiChip-label MuiChip-labelMedium css-6od3lo-MuiChip-label"
            >
              2
            </span>
          </div>
        </span>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </section>
    <section
      class="css-1xgwlqi-StyledButtonSection e1bn4x3g20"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary e1bn4x3g30 et5j5k2 css-1po1g5k-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton-StyledHeaderButton"
        tabindex="0"
        type="button"
      >
        <span
          class="css-1t5yxjj-StyledChildren-StyledChildren et5j5k1"
        >
          Label
        </span>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-colorPrimary e1bn4x3g30 et5j5k2 css-1n4xhz9-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton-StyledHeaderButton"
        tabindex="0"
        type="button"
      >
        <span
          class="css-1t5yxjj-StyledChildren-StyledChildren et5j5k1"
        >
          Label
        </span>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <button
        aria-label="[object Object]"
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeLarge MuiButton-textSizeLarge MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeLarge MuiButton-textSizeLarge MuiButton-colorPrimary e1bn4x3g28 et5j5k2 css-8je3a5-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton-StyledWideIconButton"
        tabindex="0"
        type="button"
      >
        <span
          class="css-1t5yxjj-StyledChildren-StyledChildren et5j5k1"
        >
          <div
            class="css-1q8yjse-StyledIcon emi0zh40"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-1rowxxw-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
              data-file-name="IconPersonSmall"
              data-testid="IconPersonSmall"
              fillcontrast="white"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            />
          </div>
        </span>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </section>
  </div>
</header>
`;

exports[`<NavigationHeader /> > WithTopComponent story renders snapshot 1`] = `
<div
  class="css-1wkjy9m-StyledTopComponentSlot e1bn4x3g35"
>
  <div
    class="css-1k5sc26-StyledBanner e15g05660"
    role="banner"
  >
    <div
      class="css-13f9v10-Centered e15g05664"
    >
      <div
        class="css-kj3c67-IconWrapper e15g05663"
      >
        <div
          class="css-1q8yjse-StyledIcon emi0zh40"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-1rowxxw-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
            data-file-name="IconInfoCircleSmall"
            data-testid="IconInfoCircleSmall"
            fillcontrast="white"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          />
        </div>
      </div>
      This is a banner to test the top offset - Try closing me!
    </div>
    <button
      aria-label="Close"
      class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeLarge MuiButton-textSizeLarge MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeLarge MuiButton-textSizeLarge MuiButton-colorPrimary e15g05662 et5j5k2 css-csuk1e-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-SecondaryButtonStyles-LargeButtonStyles-StyledButton-StyledButton"
      tabindex="0"
      type="button"
    >
      <span
        class="css-1t5yxjj-StyledChildren-StyledChildren et5j5k1"
      >
        <div
          class="css-1q8yjse-StyledIcon emi0zh40"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-1rowxxw-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
            data-file-name="IconXMarkSmall"
            data-testid="IconXMarkSmall"
            fillcontrast="white"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          />
        </div>
      </span>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`<NavigationHeader /> > matches the snapshot 1`] = `
<DocumentFragment>
  <header
    aria-label="Main navigation"
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionSticky e1bn4x3g34 css-1km1s24-MuiPaper-root-MuiAppBar-root-StyledAppBar"
    style="top: 0px;"
    tabindex="0"
  >
    <div
      class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular e1bn4x3g33 css-tw0g88-MuiToolbar-root-StyledToolbar"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover e1bn4x3g27 ecbcrkq0 css-j4g8ja-MuiTypography-root-MuiLink-root-StyledLink-defaultStyle-StyledLink-StyledLogoLinkWrapper"
        href="https://chanzuckerberg.com"
      >
        <div
          class="css-d4qctl-StyledTitleContainer e1bn4x3g25"
        >
          <div
            class="css-1m21yd3-StyledLogoWrapper e1bn4x3g26"
          >
            <div
              style="align-items: center; display: flex; font-size: 10px; font-weight: normal; height: 24px; justify-content: center; width: 50px;"
            >
              Logo slot
            </div>
          </div>
          <div
            class="css-1pjyetm-StyledTitleTagWrapper e1bn4x3g24"
          >
            <p>
              Title
            </p>
            <div
              class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-filledPrimary e1bn4x3g23 esrfbz40 css-hvtshh-MuiChip-root-StyledTag-tagSizeS-createTypeCss-square-StyledTag-StyledTag"
            >
              <span
                class="MuiChip-label MuiChip-labelMedium css-6od3lo-MuiChip-label"
              >
                Tag
              </span>
            </div>
          </div>
        </div>
      </a>
      <div
        class="css-19hl789-StyledPrimaryNavContainer e1bn4x3g22"
      >
        <section
          class="css-pirabh-StyledSection-StyledSection e13tbovl6"
        >
          <a
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary e810m81 et5j5k2 css-1m6giw9-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-MediumButtonStyles-StyledButton-UnifiedNavItem-UnifiedNavItem"
            role="button"
            tabindex="0"
          >
            <span
              class="css-1t5yxjj-StyledChildren-StyledChildren et5j5k1"
            >
              <span
                class="css-ne3aa0-StyledLabel-StyledLabel e810m80"
              >
                <div
                  class="css-10l24hl-StyledLabelTextWrapper-StyledLabelTextWrapper e13tbovl1"
                >
                  Primary
                </div>
                <div
                  aria-hidden="true"
                  class="css-kik51h-StyledLabelTextWrapperShadow-StyledLabelTextWrapperShadow e13tbovl0"
                >
                  Primary
                </div>
              </span>
            </span>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </a>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary e810m81 et5j5k2 css-1m6giw9-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-MediumButtonStyles-StyledButton-UnifiedNavItem-UnifiedNavItem"
            tabindex="0"
            type="button"
          >
            <span
              class="css-1t5yxjj-StyledChildren-StyledChildren et5j5k1"
            >
              <span
                class="css-ne3aa0-StyledLabel-StyledLabel e810m80"
              >
                <div
                  class="css-10l24hl-StyledLabelTextWrapper-StyledLabelTextWrapper e13tbovl1"
                >
                  Primary
                </div>
                <div
                  aria-hidden="true"
                  class="css-kik51h-StyledLabelTextWrapperShadow-StyledLabelTextWrapperShadow e13tbovl0"
                >
                  Primary
                </div>
                <div
                  class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-filledPrimary etq4jsl1 esrfbz40 css-n8zrq8-MuiChip-root-StyledTag-tagSizeS-createTypeCss-square-StyledTag-StyledTag"
                >
                  <span
                    class="MuiChip-label MuiChip-labelMedium css-6od3lo-MuiChip-label"
                  >
                    Tag
                  </span>
                </div>
              </span>
            </span>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary e810m81 et5j5k2 css-1m6giw9-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-MediumButtonStyles-StyledButton-UnifiedNavItem-UnifiedNavItem"
            items="[object Object],[object Object]"
            tabindex="0"
            type="button"
          >
            <span
              class="css-1t5yxjj-StyledChildren-StyledChildren et5j5k1"
            >
              <span
                class="css-ne3aa0-StyledLabel-StyledLabel e810m80"
              >
                <div
                  class="css-10l24hl-StyledLabelTextWrapper-StyledLabelTextWrapper e13tbovl1"
                >
                  Primary
                </div>
                <div
                  aria-hidden="true"
                  class="css-kik51h-StyledLabelTextWrapperShadow-StyledLabelTextWrapperShadow e13tbovl0"
                >
                  Primary
                </div>
                <div
                  class="css-1q8yjse-StyledIcon emi0zh40"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-1rowxxw-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
                    data-file-name="IconChevronDownSmall"
                    data-testid="IconChevronDownSmall"
                    fillcontrast="white"
                    focusable="false"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  />
                </div>
              </span>
            </span>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </section>
        <div>
          <label
            class="css-11su3a8-StyledLabel e1h1uy4z2"
            for="nav-bar-search"
          >
            Search
          </label>
          <div
            class="MuiFormControl-root MuiTextField-root e1bn4x3g21 e1h1uy4z1 css-1b4gs1z-MuiFormControl-root-MuiTextField-root-StyledSearchBase-rounded-StyledSearchBase-StyledSearch"
          >
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall MuiInputBase-adornedStart css-1q6at85-MuiInputBase-root-MuiOutlinedInput-root"
            >
              <div
                class="MuiInputAdornment-root MuiInputAdornment-positionStart MuiInputAdornment-outlined MuiInputAdornment-sizeSmall e1h1uy4z0 css-cusln8-MuiInputAdornment-root-StyledInputAdornment"
              >
                <span
                  class="notranslate"
                >
                  ​
                </span>
                <button
                  aria-label="search-button"
                  class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeLarge MuiButton-textSizeLarge MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeLarge MuiButton-textSizeLarge MuiButton-colorPrimary et5j5k2 css-1xt4pop-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-SecondaryButtonStyles-LargeButtonStyles-StyledButton"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="css-1t5yxjj-StyledChildren-StyledChildren et5j5k1"
                  >
                    <div
                      class="css-1q8yjse-StyledIcon emi0zh40"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-1rowxxw-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
                        data-file-name="IconSearchSmall"
                        data-testid="IconSearchSmall"
                        fillcontrast="white"
                        focusable="false"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      />
                    </div>
                  </span>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </button>
              </div>
              <input
                aria-invalid="false"
                autocomplete="one-time-code"
                class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputTypeSearch MuiInputBase-inputSizeSmall MuiInputBase-inputAdornedStart css-1xp6qmi-MuiInputBase-input-MuiOutlinedInput-input"
                id="nav-bar-search"
                placeholder="Search"
                type="search"
                value=""
              />
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-r01yff-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="css-1whs34k-MuiNotchedOutlined-root"
                >
                  <span
                    class="notranslate"
                  >
                    ​
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
      </div>
      <section
        class="css-pirabh-StyledSection-StyledSection e13tbovl6"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary e810m81 et5j5k2 css-12njv1n-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-MediumButtonStyles-StyledButton-UnifiedNavItem-UnifiedNavItem-UnifiedNavItem"
          items="[object Object],[object Object]"
          tabindex="0"
          type="button"
        >
          <span
            class="css-1t5yxjj-StyledChildren-StyledChildren et5j5k1"
          >
            <div
              class="css-10l24hl-StyledLabelTextWrapper-StyledLabelTextWrapper e13tbovl1"
            >
              Secondary
            </div>
            <div
              aria-hidden="true"
              class="css-kik51h-StyledLabelTextWrapperShadow-StyledLabelTextWrapperShadow e13tbovl0"
            >
              Secondary
            </div>
            <div
              class="css-1q8yjse-StyledIcon emi0zh40"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-1rowxxw-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
                data-file-name="IconChevronDownSmall"
                data-testid="IconChevronDownSmall"
                fillcontrast="white"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              />
            </div>
          </span>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary e810m81 et5j5k2 css-12njv1n-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-MediumButtonStyles-StyledButton-UnifiedNavItem-UnifiedNavItem-UnifiedNavItem"
          tabindex="0"
          type="button"
        >
          <span
            class="css-1t5yxjj-StyledChildren-StyledChildren et5j5k1"
          >
            Secondary
            <div
              class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-filledPrimary es7myp0 esrfbz40 css-l6hxs0-MuiChip-root-StyledTag-tagSizeS-createTypeCss-square-StyledTag-StyledTag"
            >
              <span
                class="MuiChip-label MuiChip-labelMedium css-6od3lo-MuiChip-label"
              >
                2
              </span>
            </div>
          </span>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </section>
      <section
        class="css-1xgwlqi-StyledButtonSection e1bn4x3g20"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary e1bn4x3g30 et5j5k2 css-1po1g5k-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton-StyledHeaderButton"
          tabindex="0"
          type="button"
        >
          <span
            class="css-1t5yxjj-StyledChildren-StyledChildren et5j5k1"
          >
            Label
          </span>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-colorPrimary e1bn4x3g30 et5j5k2 css-1n4xhz9-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton-StyledHeaderButton"
          tabindex="0"
          type="button"
        >
          <span
            class="css-1t5yxjj-StyledChildren-StyledChildren et5j5k1"
          >
            Label
          </span>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
        <button
          aria-label="[object Object]"
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeLarge MuiButton-textSizeLarge MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeLarge MuiButton-textSizeLarge MuiButton-colorPrimary e1bn4x3g28 et5j5k2 css-8je3a5-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton-StyledWideIconButton"
          tabindex="0"
          type="button"
        >
          <span
            class="css-1t5yxjj-StyledChildren-StyledChildren et5j5k1"
          >
            <div
              class="css-1q8yjse-StyledIcon emi0zh40"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-1rowxxw-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
                data-file-name="IconPersonSmall"
                data-testid="IconPersonSmall"
                fillcontrast="white"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              />
            </div>
          </span>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </section>
    </div>
  </header>
  <div
    class="MuiContainer-root MuiContainer-maxWidthLg css-1oqqzyl-MuiContainer-root"
  >
    <div
      class="MuiBox-root css-0"
    >
      <p>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Imperdiet massa tincidunt nunc pulvinar sapien et ligula ullamcorper. Urna duis convallis convallis tellus id interdum velit laoreet id. Donec ultrices tincidunt arcu non sodales. Aliquam eleifend mi in nulla posuere. Quisque id diam vel quam elementum pulvinar. Euismod quis viverra nibh cras pulvinar mattis nunc sed blandit. Id consectetur purus ut faucibus. Molestie at elementum eu facilisis sed odio morbi quis commodo. Et leo duis ut diam. Nulla facilisi cras fermentum odio. Magnis dis parturient montes nascetur ridiculus mus mauris. Maecenas volutpat blandit aliquam etiam erat. Arcu dui vivamus arcu felis bibendum ut tristique. Id porta nibh venenatis cras sed felis eget. Mi ipsum faucibus vitae aliquet nec ullamcorper. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Imperdiet massa tincidunt nunc pulvinar sapien et ligula ullamcorper. Urna duis convallis convallis tellus id interdum velit laoreet id. Donec ultrices tincidunt arcu non sodales. Aliquam eleifend mi in nulla posuere. Quisque id diam vel quam elementum pulvinar. Euismod quis viverra nibh cras pulvinar mattis nunc sed blandit. Id consectetur purus ut faucibus. Molestie at elementum eu facilisis sed odio morbi quis commodo. Et leo duis ut diam. Nulla facilisi cras fermentum odio. Magnis dis parturient montes nascetur ridiculus mus mauris. Maecenas volutpat blandit aliquam etiam erat. Arcu dui vivamus arcu felis bibendum ut tristique. Id porta nibh venenatis cras sed felis eget. Mi ipsum faucibus vitae aliquet nec ullamcorper.
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Imperdiet massa tincidunt nunc pulvinar sapien et ligula ullamcorper. Urna duis convallis convallis tellus id interdum velit laoreet id. Donec ultrices tincidunt arcu non sodales. Aliquam eleifend mi in nulla posuere. Quisque id diam vel quam elementum pulvinar. Euismod quis viverra nibh cras pulvinar mattis nunc sed blandit. Id consectetur purus ut faucibus. Molestie at elementum eu facilisis sed odio morbi quis commodo. Et leo duis ut diam. Nulla facilisi cras fermentum odio. Magnis dis parturient montes nascetur ridiculus mus mauris. Maecenas volutpat blandit aliquam etiam erat. Arcu dui vivamus arcu felis bibendum ut tristique. Id porta nibh venenatis cras sed felis eget. Mi ipsum faucibus vitae aliquet nec ullamcorper. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Imperdiet massa tincidunt nunc pulvinar sapien et ligula ullamcorper. Urna duis convallis convallis tellus id interdum velit laoreet id. Donec ultrices tincidunt arcu non sodales. Aliquam eleifend mi in nulla posuere. Quisque id diam vel quam elementum pulvinar. Euismod quis viverra nibh cras pulvinar mattis nunc sed blandit. Id consectetur purus ut faucibus. Molestie at elementum eu facilisis sed odio morbi quis commodo. Et leo duis ut diam. Nulla facilisi cras fermentum odio. Magnis dis parturient montes nascetur ridiculus mus mauris. Maecenas volutpat blandit aliquam etiam erat. Arcu dui vivamus arcu felis bibendum ut tristique. Id porta nibh venenatis cras sed felis eget. Mi ipsum faucibus vitae aliquet nec ullamcorper.
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Imperdiet massa tincidunt nunc pulvinar sapien et ligula ullamcorper. Urna duis convallis convallis tellus id interdum velit laoreet id. Donec ultrices tincidunt arcu non sodales. Aliquam eleifend mi in nulla posuere. Quisque id diam vel quam elementum pulvinar. Euismod quis viverra nibh cras pulvinar mattis nunc sed blandit. Id consectetur purus ut faucibus. Molestie at elementum eu facilisis sed odio morbi quis commodo. Et leo duis ut diam. Nulla facilisi cras fermentum odio. Magnis dis parturient montes nascetur ridiculus mus mauris. Maecenas volutpat blandit aliquam etiam erat. Arcu dui vivamus arcu felis bibendum ut tristique. Id porta nibh venenatis cras sed felis eget. Mi ipsum faucibus vitae aliquet nec ullamcorper. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Imperdiet massa tincidunt nunc pulvinar sapien et ligula ullamcorper. Urna duis convallis convallis tellus id interdum velit laoreet id. Donec ultrices tincidunt arcu non sodales. Aliquam eleifend mi in nulla posuere. Quisque id diam vel quam elementum pulvinar. Euismod quis viverra nibh cras pulvinar mattis nunc sed blandit. Id consectetur purus ut faucibus. Molestie at elementum eu facilisis sed odio morbi quis commodo. Et leo duis ut diam. Nulla facilisi cras fermentum odio. Magnis dis parturient montes nascetur ridiculus mus mauris. Maecenas volutpat blandit aliquam etiam erat. Arcu dui vivamus arcu felis bibendum ut tristique. Id porta nibh venenatis cras sed felis eget. Mi ipsum faucibus vitae aliquet nec ullamcorper.
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Imperdiet massa tincidunt nunc pulvinar sapien et ligula ullamcorper. Urna duis convallis convallis tellus id interdum velit laoreet id. Donec ultrices tincidunt arcu non sodales. Aliquam eleifend mi in nulla posuere. Quisque id diam vel quam elementum pulvinar. Euismod quis viverra nibh cras pulvinar mattis nunc sed blandit. Id consectetur purus ut faucibus. Molestie at elementum eu facilisis sed odio morbi quis commodo. Et leo duis ut diam. Nulla facilisi cras fermentum odio. Magnis dis parturient montes nascetur ridiculus mus mauris. Maecenas volutpat blandit aliquam etiam erat. Arcu dui vivamus arcu felis bibendum ut tristique. Id porta nibh venenatis cras sed felis eget. Mi ipsum faucibus vitae aliquet nec ullamcorper. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Imperdiet massa tincidunt nunc pulvinar sapien et ligula ullamcorper. Urna duis convallis convallis tellus id interdum velit laoreet id. Donec ultrices tincidunt arcu non sodales. Aliquam eleifend mi in nulla posuere. Quisque id diam vel quam elementum pulvinar. Euismod quis viverra nibh cras pulvinar mattis nunc sed blandit. Id consectetur purus ut faucibus. Molestie at elementum eu facilisis sed odio morbi quis commodo. Et leo duis ut diam. Nulla facilisi cras fermentum odio. Magnis dis parturient montes nascetur ridiculus mus mauris. Maecenas volutpat blandit aliquam etiam erat. Arcu dui vivamus arcu felis bibendum ut tristique. Id porta nibh venenatis cras sed felis eget. Mi ipsum faucibus vitae aliquet nec ullamcorper.
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Imperdiet massa tincidunt nunc pulvinar sapien et ligula ullamcorper. Urna duis convallis convallis tellus id interdum velit laoreet id. Donec ultrices tincidunt arcu non sodales. Aliquam eleifend mi in nulla posuere. Quisque id diam vel quam elementum pulvinar. Euismod quis viverra nibh cras pulvinar mattis nunc sed blandit. Id consectetur purus ut faucibus. Molestie at elementum eu facilisis sed odio morbi quis commodo. Et leo duis ut diam. Nulla facilisi cras fermentum odio. Magnis dis parturient montes nascetur ridiculus mus mauris. Maecenas volutpat blandit aliquam etiam erat. Arcu dui vivamus arcu felis bibendum ut tristique. Id porta nibh venenatis cras sed felis eget. Mi ipsum faucibus vitae aliquet nec ullamcorper. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Imperdiet massa tincidunt nunc pulvinar sapien et ligula ullamcorper. Urna duis convallis convallis tellus id interdum velit laoreet id. Donec ultrices tincidunt arcu non sodales. Aliquam eleifend mi in nulla posuere. Quisque id diam vel quam elementum pulvinar. Euismod quis viverra nibh cras pulvinar mattis nunc sed blandit. Id consectetur purus ut faucibus. Molestie at elementum eu facilisis sed odio morbi quis commodo. Et leo duis ut diam. Nulla facilisi cras fermentum odio. Magnis dis parturient montes nascetur ridiculus mus mauris. Maecenas volutpat blandit aliquam etiam erat. Arcu dui vivamus arcu felis bibendum ut tristique. Id porta nibh venenatis cras sed felis eget. Mi ipsum faucibus vitae aliquet nec ullamcorper.
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Imperdiet massa tincidunt nunc pulvinar sapien et ligula ullamcorper. Urna duis convallis convallis tellus id interdum velit laoreet id. Donec ultrices tincidunt arcu non sodales. Aliquam eleifend mi in nulla posuere. Quisque id diam vel quam elementum pulvinar. Euismod quis viverra nibh cras pulvinar mattis nunc sed blandit. Id consectetur purus ut faucibus. Molestie at elementum eu facilisis sed odio morbi quis commodo. Et leo duis ut diam. Nulla facilisi cras fermentum odio. Magnis dis parturient montes nascetur ridiculus mus mauris. Maecenas volutpat blandit aliquam etiam erat. Arcu dui vivamus arcu felis bibendum ut tristique. Id porta nibh venenatis cras sed felis eget. Mi ipsum faucibus vitae aliquet nec ullamcorper. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Imperdiet massa tincidunt nunc pulvinar sapien et ligula ullamcorper. Urna duis convallis convallis tellus id interdum velit laoreet id. Donec ultrices tincidunt arcu non sodales. Aliquam eleifend mi in nulla posuere. Quisque id diam vel quam elementum pulvinar. Euismod quis viverra nibh cras pulvinar mattis nunc sed blandit. Id consectetur purus ut faucibus. Molestie at elementum eu facilisis sed odio morbi quis commodo. Et leo duis ut diam. Nulla facilisi cras fermentum odio. Magnis dis parturient montes nascetur ridiculus mus mauris. Maecenas volutpat blandit aliquam etiam erat. Arcu dui vivamus arcu felis bibendum ut tristique. Id porta nibh venenatis cras sed felis eget. Mi ipsum faucibus vitae aliquet nec ullamcorper.
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Imperdiet massa tincidunt nunc pulvinar sapien et ligula ullamcorper. Urna duis convallis convallis tellus id interdum velit laoreet id. Donec ultrices tincidunt arcu non sodales. Aliquam eleifend mi in nulla posuere. Quisque id diam vel quam elementum pulvinar. Euismod quis viverra nibh cras pulvinar mattis nunc sed blandit. Id consectetur purus ut faucibus. Molestie at elementum eu facilisis sed odio morbi quis commodo. Et leo duis ut diam. Nulla facilisi cras fermentum odio. Magnis dis parturient montes nascetur ridiculus mus mauris. Maecenas volutpat blandit aliquam etiam erat. Arcu dui vivamus arcu felis bibendum ut tristique. Id porta nibh venenatis cras sed felis eget. Mi ipsum faucibus vitae aliquet nec ullamcorper. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Imperdiet massa tincidunt nunc pulvinar sapien et ligula ullamcorper. Urna duis convallis convallis tellus id interdum velit laoreet id. Donec ultrices tincidunt arcu non sodales. Aliquam eleifend mi in nulla posuere. Quisque id diam vel quam elementum pulvinar. Euismod quis viverra nibh cras pulvinar mattis nunc sed blandit. Id consectetur purus ut faucibus. Molestie at elementum eu facilisis sed odio morbi quis commodo. Et leo duis ut diam. Nulla facilisi cras fermentum odio. Magnis dis parturient montes nascetur ridiculus mus mauris. Maecenas volutpat blandit aliquam etiam erat. Arcu dui vivamus arcu felis bibendum ut tristique. Id porta nibh venenatis cras sed felis eget. Mi ipsum faucibus vitae aliquet nec ullamcorper.
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Imperdiet massa tincidunt nunc pulvinar sapien et ligula ullamcorper. Urna duis convallis convallis tellus id interdum velit laoreet id. Donec ultrices tincidunt arcu non sodales. Aliquam eleifend mi in nulla posuere. Quisque id diam vel quam elementum pulvinar. Euismod quis viverra nibh cras pulvinar mattis nunc sed blandit. Id consectetur purus ut faucibus. Molestie at elementum eu facilisis sed odio morbi quis commodo. Et leo duis ut diam. Nulla facilisi cras fermentum odio. Magnis dis parturient montes nascetur ridiculus mus mauris. Maecenas volutpat blandit aliquam etiam erat. Arcu dui vivamus arcu felis bibendum ut tristique. Id porta nibh venenatis cras sed felis eget. Mi ipsum faucibus vitae aliquet nec ullamcorper. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Imperdiet massa tincidunt nunc pulvinar sapien et ligula ullamcorper. Urna duis convallis convallis tellus id interdum velit laoreet id. Donec ultrices tincidunt arcu non sodales. Aliquam eleifend mi in nulla posuere. Quisque id diam vel quam elementum pulvinar. Euismod quis viverra nibh cras pulvinar mattis nunc sed blandit. Id consectetur purus ut faucibus. Molestie at elementum eu facilisis sed odio morbi quis commodo. Et leo duis ut diam. Nulla facilisi cras fermentum odio. Magnis dis parturient montes nascetur ridiculus mus mauris. Maecenas volutpat blandit aliquam etiam erat. Arcu dui vivamus arcu felis bibendum ut tristique. Id porta nibh venenatis cras sed felis eget. Mi ipsum faucibus vitae aliquet nec ullamcorper.
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Imperdiet massa tincidunt nunc pulvinar sapien et ligula ullamcorper. Urna duis convallis convallis tellus id interdum velit laoreet id. Donec ultrices tincidunt arcu non sodales. Aliquam eleifend mi in nulla posuere. Quisque id diam vel quam elementum pulvinar. Euismod quis viverra nibh cras pulvinar mattis nunc sed blandit. Id consectetur purus ut faucibus. Molestie at elementum eu facilisis sed odio morbi quis commodo. Et leo duis ut diam. Nulla facilisi cras fermentum odio. Magnis dis parturient montes nascetur ridiculus mus mauris. Maecenas volutpat blandit aliquam etiam erat. Arcu dui vivamus arcu felis bibendum ut tristique. Id porta nibh venenatis cras sed felis eget. Mi ipsum faucibus vitae aliquet nec ullamcorper. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Imperdiet massa tincidunt nunc pulvinar sapien et ligula ullamcorper. Urna duis convallis convallis tellus id interdum velit laoreet id. Donec ultrices tincidunt arcu non sodales. Aliquam eleifend mi in nulla posuere. Quisque id diam vel quam elementum pulvinar. Euismod quis viverra nibh cras pulvinar mattis nunc sed blandit. Id consectetur purus ut faucibus. Molestie at elementum eu facilisis sed odio morbi quis commodo. Et leo duis ut diam. Nulla facilisi cras fermentum odio. Magnis dis parturient montes nascetur ridiculus mus mauris. Maecenas volutpat blandit aliquam etiam erat. Arcu dui vivamus arcu felis bibendum ut tristique. Id porta nibh venenatis cras sed felis eget. Mi ipsum faucibus vitae aliquet nec ullamcorper.
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Imperdiet massa tincidunt nunc pulvinar sapien et ligula ullamcorper. Urna duis convallis convallis tellus id interdum velit laoreet id. Donec ultrices tincidunt arcu non sodales. Aliquam eleifend mi in nulla posuere. Quisque id diam vel quam elementum pulvinar. Euismod quis viverra nibh cras pulvinar mattis nunc sed blandit. Id consectetur purus ut faucibus. Molestie at elementum eu facilisis sed odio morbi quis commodo. Et leo duis ut diam. Nulla facilisi cras fermentum odio. Magnis dis parturient montes nascetur ridiculus mus mauris. Maecenas volutpat blandit aliquam etiam erat. Arcu dui vivamus arcu felis bibendum ut tristique. Id porta nibh venenatis cras sed felis eget. Mi ipsum faucibus vitae aliquet nec ullamcorper. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Imperdiet massa tincidunt nunc pulvinar sapien et ligula ullamcorper. Urna duis convallis convallis tellus id interdum velit laoreet id. Donec ultrices tincidunt arcu non sodales. Aliquam eleifend mi in nulla posuere. Quisque id diam vel quam elementum pulvinar. Euismod quis viverra nibh cras pulvinar mattis nunc sed blandit. Id consectetur purus ut faucibus. Molestie at elementum eu facilisis sed odio morbi quis commodo. Et leo duis ut diam. Nulla facilisi cras fermentum odio. Magnis dis parturient montes nascetur ridiculus mus mauris. Maecenas volutpat blandit aliquam etiam erat. Arcu dui vivamus arcu felis bibendum ut tristique. Id porta nibh venenatis cras sed felis eget. Mi ipsum faucibus vitae aliquet nec ullamcorper.
      </p>
    </div>
  </div>
</DocumentFragment>
`;
